[package]
name = "proton_server"
version = "0.1.0"
authors = ["kbrandt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proton_shared = { path = "../shared" }
strum = "0.18.0"
strum_macros = "0.18.0"
rayon = "1.3.1"
parking_lot = "0.11.0"
